--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,12 @@ alembic>=1.13.1
 boto3>=1.34.14
 opencv-python>=4.9.0
 scikit-image>=0.21.0
-scipy==1.15.2
+scipy>=1.15.0
 numpy>=1.26.0
 pillow>=10.2.0
 email-validator>=2.1.0
 requests>=2.31.0
+tensorflow==2.9.1
+tensorflow-metal==0.5.0 ; platform_system=="Darwin" and platform_machine=="arm64"
+scipy>=1.10.0,<1.12.0
+Pillow>=9.0.0
