--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,6 @@ tensorflow==2.15.0
 scikit-learn==1.0.2
 # Условная зависимость только для Mac с M1/M2
 tensorflow-metal==0.5.0 ; platform_system=="Darwin" and platform_machine=="arm64"
+# Добавьте эти строки в конец вашего requirements.txt, если их еще нет
+websockets>=11.0.3
+uvicorn[standard]>=0.27.0
