--- a/alembic.ini
+++ b/alembic.ini
@@ -2,14 +2,11 @@
 
 [alembic]
 # path to migration scripts
-# Use forward slashes (/) also on windows to provide an os agnostic path
-script_location = migrations
+script_location = alembic
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
-# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
-# for all available tokens
-# file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
+# file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
@@ -17,13 +14,11 @@ prepend_sys_path = .
 
 # timezone to use when rendering the date within the migration file
 # as well as the filename.
-# If specified, requires the python>=3.9 or backports.zoneinfo library and tzdata library.
-# Any required deps can installed by adding `alembic[tz]` to the pip requirements
-# string value is passed to ZoneInfo()
-# leave blank for localtime
+# If specified, requires the python-dateutil library
 # timezone =
 
-# max length of characters to apply to the "slug" field
+# max length of characters to apply to the
+# "slug" field
 # truncate_slug_length = 40
 
 # set to 'true' to run the environment during
@@ -36,10 +31,10 @@ prepend_sys_path = .
 # sourceless = false
 
 # version location specification; This defaults
-# to migrations/versions.  When using multiple version
+# to alembic/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path.
 # The path separator used here should be the separator specified by "version_path_separator" below.
-# version_locations = %(here)s/bar:%(here)s/bat:migrations/versions
+# version_locations = %(here)s/bar:%(here)s/bat:alembic/versions
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses os.pathsep.
@@ -49,11 +44,7 @@ prepend_sys_path = .
 # version_path_separator = :
 # version_path_separator = ;
 # version_path_separator = space
-# version_path_separator = newline
-#
-# Use os.pathsep. Default configuration used for new projects.
-version_path_separator = os
-
+version_path_separator = os  # Use os.pathsep.
 # set to 'true' to search source files recursively
 # in each "version_locations" directory
 # new in Alembic version 1.10
@@ -63,7 +54,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url =
 
 
 [post_write_hooks]
@@ -81,7 +72,7 @@ sqlalchemy.url = driver://user:pass@localhost/dbname
 # hooks = ruff
 # ruff.type = exec
 # ruff.executable = %(here)s/.venv/bin/ruff
-# ruff.options = check --fix REVISION_SCRIPT_FILENAME
+# ruff.options = --fix REVISION_SCRIPT_FILENAME
 
 # Logging configuration
 [loggers]
@@ -94,12 +85,12 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARNING
+level = WARN
 handlers = console
 qualname =
 
 [logger_sqlalchemy]
-level = WARNING
+level = WARN
 handlers =
 qualname = sqlalchemy.engine
 
